# river_ros

./: .gitignore  CMakeLists.txt  package.xml
config/: params.yaml  params_orig.yaml  test.yaml
doc/arduino/: CMakeLists.txt
doc/arduino/arduino_code/: ROS_Pixy_Box.ino  ROS_Pixy_Calibration.ino
doc/arduino/build_isolated/: catkin_make_isolated.cache
doc/arduino/devel_isolated/: _setup_util.py  setup.sh
doc/arduino/launch/: serial.launch
doc/arduino/src/: Pixy_Repackage.cpp  serial_node.py
doc/bag_config/: CMakeLists (copy).txt  CMakeLists.txt  listener.cpp  talker.cpp
doc/bag_config/data/: Y_cal0.txt  Y_cal1.txt  Y_cal2.txt  Y_cal3.txt  Y_cal4.txt  Y_cal5.txt  Y_cal6.txt  Y_cal7.txt  Y_cal8.txt  Y_cal9.txt  Y_sim.txt  Y_sim0.txt  Y_sim0_bag1.txt  Y_sim0_test.txt  Y_sim1.txt  Y_sim1_bag1.txt  Y_sim1_test.txt  Y_sim2.txt  Y_sim2_bag1.txt  Y_sim2_test.txt  Y_sim3_bag1.txt  Y_sim3_test.txt  Y_sim4_bag1.txt  Y_sim4_test.txt  Y_sim5_bag2.txt  Y_sim6_bag2.txt  Y_sim7_bag2.txt  Y_sim8_bag2.txt  Y_sim9_bag2.txt  box_cam0_final.txt  box_cam1_final.txt  box_cam2_final.txt  cam0_final.txt  cam1_final.txt  cam2_final.txt  test.yaml
doc/bag_config/headers/: BAG.hpp  MARKER.hpp  SENSOR.hpp  SENSOR_MIN.hpp  SYSTEM.hpp  addtl_func.hpp  matrix.h
doc/bag_config/include/: BAG.cpp  BAG.hpp  CMakeLists.txt  CONSTANTS.hpp  CORE.hpp  DATA.cpp  DATA.hpp  EKF.hpp  ERRORS.hpp  MARKER.hpp  SENSOR.cpp  SENSOR.hpp  SYSTEM.cpp  SYSTEM.cpp.save  SYSTEM.hpp  oriDetermine.h
doc/bag_config/launch/: bag_config_node.launch
doc/bag_config/matplotlib-cpp-master/: matplotlibcpp.h
doc/bag_config/matplotlib-cpp-master/contrib/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/bag_config/src/: BAG.cpp  ERRORS.cpp  MARKER.cpp  SENSOR.cpp  SENSOR_MIN.cpp  SYSTEM.cpp  addtl_func.cpp  bag_config_test_node.cpp  listener.cpp  main.cpp  matrix.cpp  oriDetermine.cpp  talker.cpp  talker.cpp.save  testBag_1.txt  testData_1.txt  testQ_1.txt
doc/manipulator/: CMakeLists.txt
doc/manipulator/include/: CMakeLists.txt
doc/manipulator/launch/: test_manipulator_node_real.launch  test_manipulator_node_sim.launch  ur10e_manipulator_node_sim.launch
doc/manipulator/src/: manipulator_node.cpp  manipulator_node_original.cpp  test_manipulator_node.cpp
doc/status/: CMakeLists.txt
doc/status/launch/: status_node.launch
doc/status/src/: status_node.cpp
doc/task_planner/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
doc/task_planner/include/: .transitionSystem.h.swp  CMakeLists.txt  astar.cpp  astar.h  condition.cpp  condition.h  edge.cpp  edge.h  state.cpp  state.h  transitionSystem.cpp  transitionSystem.h
doc/task_planner/include/copies/: state_v1.cpp  state_v1.h  transitionSystem_v1.cpp  transitionSystem_v1.h
doc/task_planner/launch/: task_planner_node.launch
doc/task_planner/src/: TEST_task_planner_node.cpp  VECTOR_task_planner_node.cpp  eef_srv_test_node.cpp  task_planner_node.cpp
msg/: BagConfigPoseArray_msg.msg  PlanningQueryStatus_msg.msg  PlanningQuery_msg.msg  command.msg  data_pkg.msg  data_pkt.msg  data_pt.msg  sensory_info.msg
srv/: CargoPoseArray.srv  Observe_srv.srv  PlanExecute.srv  PlanExecute_srv.srv  PlanningQuery_msg.msg  PlanningQuery_srv.srv
